added translations for the spyglass overlay